try module block

--- a/templates/default/appserver.apache2.php.conf.erb
+++ b/templates/default/appserver.apache2.php.conf.erb
@@ -13,6 +13,13 @@ Listen <%= @out[:port] %>
   php_flag newrelic.enabled true
   php_value newrelic.appname "<%= @application[:shortname]%>"
 
+  <IfModule mod_php7.c>
+    php_flag newrelic.enabled true
+    php_value date.timezone "America/New_York"
+    php_value newrelic.appname "<%= @application[:shortname]%>"
+    php_value newrelic.loglevel "info"
+  </IfModule>
+
   <Directory <%= File.join(@deploy_dir, 'current') %>>
     Options FollowSymLinks
     AllowOverride None
