add newrelic license to apache template

--- a/templates/default/appserver.apache2.php.conf.erb
+++ b/templates/default/appserver.apache2.php.conf.erb
@@ -13,6 +13,7 @@ Listen <%= @out[:port] %>
   <IfModule mod_php7.c>
     php_flag newrelic.enabled true
     php_value date.timezone "America/New_York"
+    php_value newrelic.license "<%= node['newrelic']['application_monitoring']['license'] %>"
     php_value newrelic.appname "<%= @application[:shortname]%>"
     php_value newrelic.loglevel "info"
   </IfModule>
